# FCR-Reminder

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  blueprint.md  build.rs  index.html  mkdocs.yml
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: feature-requests.yaml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: docs.yml  draft-release.yml
architecture/: index.html
architecture/architecture/: index.html
architecture/blueprint/: index.html
architecture/control_api/: index.html
architecture/linux_runtime/: index.html
architecture/verification/: index.html
architecture/windows_runtime/: index.html
assets/javascripts/: nav-section-links.js
assets/stylesheets/: nav-section-links.css  site-polish.css
core/: Cargo.toml
core/src/: models.rs
desktop/: Cargo.toml
desktop/src/: main.rs
developer/integration_guide/: index.html
docs/: index.md
docs/architecture/: architecture.md  blueprint.md  control_api.md  index.md  linux_runtime.md  verification.md  windows_runtime.md  windows_setup.md
docs/assets/javascripts/: analytics-events.js  theme-logo.js
docs/assets/stylesheets/: custom-footer.css
docs/developer/: integration_guide.md
docs/overrides/partials/: footer.html
docs/user/: cleanup.md  commands.md  index.md  operations.md  usage.md  windows_setup.md
reminder_core/: Cargo.toml
reminder_core/src/: lib.rs  storage.rs
search/: search_index.json
src/: cli_main.rs  main.rs
src/core/: api.rs  cli.rs  commands.rs  daemon.rs  gui.rs  logger.rs  mod.rs  release_updates.rs  scheduler.rs  storage.rs
src/desktop/: Cargo.toml  build.rs
src/desktop/src/: cli_main.rs  main.rs
src/desktop/src/cli/: mod.rs
src/desktop/src/platform/: default.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/desktop/src/platform/windows/: build_support.rs  console.rs  mod.rs  notification.rs  registry.rs
src/platform/: default.rs  linux.rs  macos.rs
src/platform/windows/: build_support.rs  console.rs  events_gui.rs  mod.rs  notification.rs  registry.rs
src/reminder_core/: Cargo.toml
src/reminder_core/src/: lib.rs  logger.rs  storage.rs
src/tests/: dev-check.ps1  windows-test.ps1
tests/: dev-check.bash  lifecycle_smoke.rs  windows-test.bash
user/: index.html
user/cleanup/: index.html
user/commands/: index.html
user/operations/: index.html
user/windows_setup/: index.html
