[package]
name = "fcr-reminder"
version = "0.1.1"
edition = "2021"
autobins = false
description = "FCR Reminder tray-first background companion daemon"
license = "GPL-3.0"
repository = "https://github.com/obsidian-full-calendar-remastered/FCR-Reminder"

[[bin]]
name = "fcr-reminder"
path = "src/main.rs"

[[bin]]
name = "fcr-reminder-cli"
path = "src/cli_main.rs"

[dependencies]
tokio = { version = "1.36", features = ["macros", "net", "rt", "sync", "time"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
tray-icon = "0.14"
url = "2.5"
directories = "5.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.52", features = ["Data_Xml_Dom", "UI_Notifications"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
notify-rust = "4.0"

[build-dependencies]
ico = "0.4"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "ico"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
