[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
reminder_core = { path = "../reminder_core" }
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.1" # For opening action_url in the default browser/handler (Obsidian URIs)
chrono = "0.4" # For handling system times and trigger calculations

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5"
winreg = "0.52"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
notify-rust = "4.0"
