[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "fcr-reminder"
path = "src/main.rs"

[[bin]]
name = "fcr-reminder-cli"
path = "src/cli_main.rs"

[dependencies]
reminder_core = { path = "../reminder_core" }
tokio = { version = "1.36", features = ["macros", "net", "rt", "sync", "time"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] } # For handling system times and trigger calculations
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
tray-icon = "0.14"
url = "2.5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.52", features = ["Data_Xml_Dom", "UI_Notifications"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
notify-rust = "4.0"

[build-dependencies]
ico = "0.4"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "ico"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
